crates/app/tests/compile_fail/parse_failure_to_outbound.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/parse_failure_to_outbound.rs:19:18
   |
19 |         summary: pf, // expected `&str`, got `ParseFailure`
   |                  ^^ expected `&str`, found `ParseFailure`
